Fix background-color of header bleeding over border

--- a/poke-app/src/components/PokeHeader/PokeHeader.module.css
+++ b/poke-app/src/components/PokeHeader/PokeHeader.module.css
@@ -7,7 +7,6 @@
   width: 100%;
   height: 60%;
   top: 0;
-  background-color: #F5F5F5;
   border-radius: 15px;
   z-index: 1;
   transition: all 0.15s ease;
@@ -33,10 +32,20 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  z-index: -2;
+  background-color: #F5F5F5;
+}
+.header__border {
+  width: 100%;
+  height: 100%;
+  position: absolute;
   border-radius: 7px;
   overflow: hidden;
   z-index: 2;
   border: 3px solid #212121;
+}
+.hidden {
+  display: none;
 }
 .img__container {
   display: flex;
